--- a/module-1/lab-df-calculation-and-transformation/your-code/challenge-1.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/challenge-1.ipynb
@@ -388,26 +388,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'<' not supported between instances of 'float' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-24-6521535158bb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mType\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mt1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mType\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Library/Python/3.7/lib/python/site-packages/numpy/lib/arraysetops.py\u001b[0m in \u001b[0;36munique\u001b[0;34m(ar, return_index, return_inverse, return_counts, axis)\u001b[0m\n\u001b[1;32m    262\u001b[0m     \u001b[0mar\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masanyarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    263\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0maxis\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 264\u001b[0;31m         \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_unique1d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreturn_index\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreturn_inverse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreturn_counts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    265\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0m_unpack_tuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mret\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    266\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Library/Python/3.7/lib/python/site-packages/numpy/lib/arraysetops.py\u001b[0m in \u001b[0;36m_unique1d\u001b[0;34m(ar, return_index, return_inverse, return_counts)\u001b[0m\n\u001b[1;32m    310\u001b[0m         \u001b[0maux\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mar\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mperm\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    311\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 312\u001b[0;31m         \u001b[0mar\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    313\u001b[0m         \u001b[0maux\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mar\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    314\u001b[0m     \u001b[0mmask\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mempty\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maux\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbool_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'float' and 'str'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{nan, 'Ice', 'Fairy', 'Flying', 'Grass', 'Rock', 'Steel', 'Poison', 'Psychic', 'Electric', 'Bug', 'Ghost', 'Water', 'Dragon', 'Dark', 'Fire', 'Normal', 'Ground', 'Fighting'}\n"
      ]
     }
    ],
    "source": [
-    "Type = np.unique(np.concatenate((t1,t2),0))\n",
-    "print(Type)\n"
+    "Type = set(list(t1) + list(t2))\n",
+    "print(Type)"
    ]
   },
   {
@@ -1114,264 +1108,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>#</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Type 1</th>\n",
-       "      <th>Type 2</th>\n",
-       "      <th>Total</th>\n",
-       "      <th>HP</th>\n",
-       "      <th>Attack</th>\n",
-       "      <th>Defense</th>\n",
-       "      <th>Sp. Atk</th>\n",
-       "      <th>Sp. Def</th>\n",
-       "      <th>Speed</th>\n",
-       "      <th>Generation</th>\n",
-       "      <th>Legendary</th>\n",
-       "      <th>A/D Ratio</th>\n",
-       "      <th>Combo Type</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Bulbasaur</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Poison</td>\n",
-       "      <td>318</td>\n",
-       "      <td>45</td>\n",
-       "      <td>49</td>\n",
-       "      <td>49</td>\n",
-       "      <td>65</td>\n",
-       "      <td>65</td>\n",
-       "      <td>45</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>Grass-Poison</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Ivysaur</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Poison</td>\n",
-       "      <td>405</td>\n",
-       "      <td>60</td>\n",
-       "      <td>62</td>\n",
-       "      <td>63</td>\n",
-       "      <td>80</td>\n",
-       "      <td>80</td>\n",
-       "      <td>60</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.984127</td>\n",
-       "      <td>Grass-Poison</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Venusaur</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Poison</td>\n",
-       "      <td>525</td>\n",
-       "      <td>80</td>\n",
-       "      <td>82</td>\n",
-       "      <td>83</td>\n",
-       "      <td>100</td>\n",
-       "      <td>100</td>\n",
-       "      <td>80</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.987952</td>\n",
-       "      <td>Grass-Poison</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Mega Venusaur</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Poison</td>\n",
-       "      <td>625</td>\n",
-       "      <td>80</td>\n",
-       "      <td>100</td>\n",
-       "      <td>123</td>\n",
-       "      <td>122</td>\n",
-       "      <td>120</td>\n",
-       "      <td>80</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.813008</td>\n",
-       "      <td>Grass-Poison</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Charmander</td>\n",
-       "      <td>Fire</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>309</td>\n",
-       "      <td>39</td>\n",
-       "      <td>52</td>\n",
-       "      <td>43</td>\n",
-       "      <td>60</td>\n",
-       "      <td>50</td>\n",
-       "      <td>65</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1.209302</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Charmeleon</td>\n",
-       "      <td>Fire</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>405</td>\n",
-       "      <td>58</td>\n",
-       "      <td>64</td>\n",
-       "      <td>58</td>\n",
-       "      <td>80</td>\n",
-       "      <td>65</td>\n",
-       "      <td>80</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1.103448</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Charizard</td>\n",
-       "      <td>Fire</td>\n",
-       "      <td>Flying</td>\n",
-       "      <td>534</td>\n",
-       "      <td>78</td>\n",
-       "      <td>84</td>\n",
-       "      <td>78</td>\n",
-       "      <td>109</td>\n",
-       "      <td>85</td>\n",
-       "      <td>100</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1.076923</td>\n",
-       "      <td>Fire-Flying</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Mega Charizard X</td>\n",
-       "      <td>Fire</td>\n",
-       "      <td>Dragon</td>\n",
-       "      <td>634</td>\n",
-       "      <td>78</td>\n",
-       "      <td>130</td>\n",
-       "      <td>111</td>\n",
-       "      <td>130</td>\n",
-       "      <td>85</td>\n",
-       "      <td>100</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1.171171</td>\n",
-       "      <td>Fire-Dragon</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Mega Charizard Y</td>\n",
-       "      <td>Fire</td>\n",
-       "      <td>Flying</td>\n",
-       "      <td>634</td>\n",
-       "      <td>78</td>\n",
-       "      <td>104</td>\n",
-       "      <td>78</td>\n",
-       "      <td>159</td>\n",
-       "      <td>115</td>\n",
-       "      <td>100</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1.333333</td>\n",
-       "      <td>Fire-Flying</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Squirtle</td>\n",
-       "      <td>Water</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>314</td>\n",
-       "      <td>44</td>\n",
-       "      <td>48</td>\n",
-       "      <td>65</td>\n",
-       "      <td>50</td>\n",
-       "      <td>64</td>\n",
-       "      <td>43</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.738462</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   #              Name Type 1  Type 2  Total  HP  Attack  Defense  Sp. Atk  \\\n",
-       "0  1         Bulbasaur  Grass  Poison    318  45      49       49       65   \n",
-       "1  2           Ivysaur  Grass  Poison    405  60      62       63       80   \n",
-       "2  3          Venusaur  Grass  Poison    525  80      82       83      100   \n",
-       "3  3     Mega Venusaur  Grass  Poison    625  80     100      123      122   \n",
-       "4  4        Charmander   Fire     NaN    309  39      52       43       60   \n",
-       "5  5        Charmeleon   Fire     NaN    405  58      64       58       80   \n",
-       "6  6         Charizard   Fire  Flying    534  78      84       78      109   \n",
-       "7  6  Mega Charizard X   Fire  Dragon    634  78     130      111      130   \n",
-       "8  6  Mega Charizard Y   Fire  Flying    634  78     104       78      159   \n",
-       "9  7          Squirtle  Water     NaN    314  44      48       65       50   \n",
-       "\n",
-       "   Sp. Def  Speed  Generation  Legendary  A/D Ratio    Combo Type  \n",
-       "0       65     45           1      False   1.000000  Grass-Poison  \n",
-       "1       80     60           1      False   0.984127  Grass-Poison  \n",
-       "2      100     80           1      False   0.987952  Grass-Poison  \n",
-       "3      120     80           1      False   0.813008  Grass-Poison  \n",
-       "4       50     65           1      False   1.209302           NaN  \n",
-       "5       65     80           1      False   1.103448           NaN  \n",
-       "6       85    100           1      False   1.076923   Fire-Flying  \n",
-       "7       85    100           1      False   1.171171   Fire-Dragon  \n",
-       "8      115    100           1      False   1.333333   Fire-Flying  \n",
-       "9       64     43           1      False   0.738462           NaN  "
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function combo at 0x10eb86378>\n"
+     ]
     }
    ],
    "source": [
+    "def combo(typ):\n",
+    "    for e,i in pokemon[\"Type 1\",\"Type 2\"]:\n",
+    "        if i is not null:\n",
+    "            e + \"-\" + i\n",
+    "        else:\n",
+    "            e\n",
+    "    return(combo)\n",
+    "print(combo)\n",
+    "            \n",
+    "        \n",
     "pokemon[\"Combo Type\"] = pokemon[\"Type 1\"] + [\"-\"] + pokemon[\"Type 2\"]\n",
     "pokemon.head(10)"
    ]
@@ -1385,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1537,7 +1295,7 @@
        "348       95       40     95           3      False      3.000  Water-Dark  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
