--- a/module-1/lab-df-calculation-and-transformation/your-code/challenge-1.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/challenge-1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 492,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 493,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 494,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 495,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 496,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 497,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 498,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 499,
    "metadata": {},
    "outputs": [
     {
@@ -896,30 +896,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 500,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    Grass-Poison\n",
-       "1    Grass-Poison\n",
-       "2    Grass-Poison\n",
-       "3    Grass-Poison\n",
-       "4            Fire\n",
-       "Name: Combo Type, dtype: object"
-      ]
-     },
-     "execution_count": 362,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# your code here\n",
     "pokemon[\"Combo Type\"] = pokemon[\"Type 1\"]+\"-\"+pokemon[\"Type 2\"]\n",
     "\n",
-    "pokemon[\"Combo Type\"].fillna(value=pokemon[\"Type 1\"]).head()\n"
+    "pokemon[\"Combo Type\"] = pokemon[\"Combo Type\"].fillna(value=pokemon[\"Type 1\"])"
    ]
   },
   {
@@ -931,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 501,
    "metadata": {},
    "outputs": [
     {
@@ -955,162 +939,56 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>#</th>\n",
        "      <th>Name</th>\n",
-       "      <th>Type 1</th>\n",
-       "      <th>Type 2</th>\n",
-       "      <th>Total</th>\n",
-       "      <th>HP</th>\n",
-       "      <th>Attack</th>\n",
-       "      <th>Defense</th>\n",
-       "      <th>Sp. Atk</th>\n",
-       "      <th>Sp. Def</th>\n",
-       "      <th>Speed</th>\n",
-       "      <th>Generation</th>\n",
-       "      <th>Legendary</th>\n",
        "      <th>A/D Ratio</th>\n",
-       "      <th>Combo Type</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Bulbasaur</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Poison</td>\n",
-       "      <td>318</td>\n",
-       "      <td>45</td>\n",
-       "      <td>49</td>\n",
-       "      <td>49</td>\n",
-       "      <td>65</td>\n",
-       "      <td>65</td>\n",
-       "      <td>45</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>Grass-Poison</td>\n",
+       "      <th>429</th>\n",
+       "      <td>DeoxysAttack Forme</td>\n",
+       "      <td>9.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Ivysaur</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Poison</td>\n",
-       "      <td>405</td>\n",
-       "      <td>60</td>\n",
-       "      <td>62</td>\n",
-       "      <td>63</td>\n",
-       "      <td>80</td>\n",
-       "      <td>80</td>\n",
-       "      <td>60</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.984127</td>\n",
-       "      <td>Grass-Poison</td>\n",
+       "      <th>347</th>\n",
+       "      <td>Carvanha</td>\n",
+       "      <td>4.500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Venusaur</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Poison</td>\n",
-       "      <td>525</td>\n",
-       "      <td>80</td>\n",
-       "      <td>82</td>\n",
-       "      <td>83</td>\n",
-       "      <td>100</td>\n",
-       "      <td>100</td>\n",
-       "      <td>80</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.987952</td>\n",
-       "      <td>Grass-Poison</td>\n",
+       "      <th>19</th>\n",
+       "      <td>Beedrill</td>\n",
+       "      <td>3.750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Venusaur</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Poison</td>\n",
-       "      <td>625</td>\n",
-       "      <td>80</td>\n",
-       "      <td>100</td>\n",
-       "      <td>123</td>\n",
-       "      <td>122</td>\n",
-       "      <td>120</td>\n",
-       "      <td>80</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.813008</td>\n",
-       "      <td>Grass-Poison</td>\n",
+       "      <th>453</th>\n",
+       "      <td>Cranidos</td>\n",
+       "      <td>3.125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Charmander</td>\n",
-       "      <td>Fire</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>309</td>\n",
-       "      <td>39</td>\n",
-       "      <td>52</td>\n",
-       "      <td>43</td>\n",
-       "      <td>60</td>\n",
-       "      <td>50</td>\n",
-       "      <td>65</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1.209302</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Charmeleon</td>\n",
-       "      <td>Fire</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>405</td>\n",
-       "      <td>58</td>\n",
-       "      <td>64</td>\n",
-       "      <td>58</td>\n",
-       "      <td>80</td>\n",
-       "      <td>65</td>\n",
-       "      <td>80</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1.103448</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>348</th>\n",
+       "      <td>Sharpedo</td>\n",
+       "      <td>3.000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   #        Name Type 1  Type 2  Total  HP  Attack  Defense  Sp. Atk  Sp. Def  \\\n",
-       "0  1   Bulbasaur  Grass  Poison    318  45      49       49       65       65   \n",
-       "1  2     Ivysaur  Grass  Poison    405  60      62       63       80       80   \n",
-       "2  3    Venusaur  Grass  Poison    525  80      82       83      100      100   \n",
-       "3  3    Venusaur  Grass  Poison    625  80     100      123      122      120   \n",
-       "4  4  Charmander   Fire     NaN    309  39      52       43       60       50   \n",
-       "5  5  Charmeleon   Fire     NaN    405  58      64       58       80       65   \n",
-       "\n",
-       "   Speed  Generation  Legendary  A/D Ratio    Combo Type  \n",
-       "0     45           1      False   1.000000  Grass-Poison  \n",
-       "1     60           1      False   0.984127  Grass-Poison  \n",
-       "2     80           1      False   0.987952  Grass-Poison  \n",
-       "3     80           1      False   0.813008  Grass-Poison  \n",
-       "4     65           1      False   1.209302           NaN  \n",
-       "5     80           1      False   1.103448           NaN  "
+       "                   Name  A/D Ratio\n",
+       "429  DeoxysAttack Forme      9.000\n",
+       "347            Carvanha      4.500\n",
+       "19             Beedrill      3.750\n",
+       "453            Cranidos      3.125\n",
+       "348            Sharpedo      3.000"
       ]
      },
-     "execution_count": 363,
+     "execution_count": 501,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pokemon[\"A/D Ratio\"].sort_values( axis=0, ascending=False, inplace=False, kind='quicksort', na_position='last')\n",
-    "pokemon.head(6)   "
+    "pokemon[[\"Name\",\"A/D Ratio\"]].sort_values(by=[\"A/D Ratio\"],ascending=False).head()"
    ]
   },
   {
@@ -1124,30 +1002,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 506,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0    Grass-Poison\n",
-       "1    Grass-Poison\n",
-       "2    Grass-Poison\n",
-       "3    Grass-Poison\n",
-       "4            Fire\n",
-       "5            Fire\n",
-       "Name: Combo Type, dtype: object"
-      ]
-     },
-     "execution_count": 366,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Psychic', 'Water-Dark', 'Bug-Poison', 'Rock']\n"
+     ]
     }
    ],
    "source": [
-    "# your code here\n",
-    "pokemon[[\"Name\",\"A/D Ratio\", \"Combo Type\"]]\n",
-    "pokemon[\"Combo Type\"].fillna(value=pokemon[\"Type 1\"]).head(6)\n"
+    "var = pokemon[[\"Name\", \"A/D Ratio\", \"Combo Type\"]].sort_values(by=[\"A/D Ratio\"],ascending=False).head(5)\n",
+    "\n",
+    "lista=[]\n",
+    "for i in var[\"Combo Type\"]:\n",
+    "    if i not in lista:\n",
+    "        lista.append(i)\n",
+    "print(lista)"
    ]
   },
   {
@@ -1163,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 508,
    "metadata": {},
    "outputs": [
     {
@@ -1191,150 +1064,56 @@
        "  <thead>\n",
        "    <tr>\n",
        "      <th></th>\n",
-       "      <th>#</th>\n",
-       "      <th>Total</th>\n",
-       "      <th>HP</th>\n",
-       "      <th>Attack</th>\n",
-       "      <th>Defense</th>\n",
-       "      <th>Sp. Atk</th>\n",
-       "      <th>Sp. Def</th>\n",
-       "      <th>Speed</th>\n",
-       "      <th>Generation</th>\n",
-       "      <th>Legendary</th>\n",
        "      <th>A/D Ratio</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
        "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Combo Type</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Bug-Electric</th>\n",
-       "      <td>595.500000</td>\n",
-       "      <td>395.5</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>62.000000</td>\n",
-       "      <td>55.000000</td>\n",
-       "      <td>77.000000</td>\n",
-       "      <td>55.000000</td>\n",
-       "      <td>86.500000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.111667</td>\n",
+       "      <th>Bug-Poison</th>\n",
+       "      <td>3.750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Bug-Fighting</th>\n",
-       "      <td>214.000000</td>\n",
-       "      <td>550.0</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>155.000000</td>\n",
-       "      <td>95.000000</td>\n",
-       "      <td>40.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>80.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.637681</td>\n",
+       "      <th>Psychic</th>\n",
+       "      <td>9.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Bug-Fire</th>\n",
-       "      <td>636.500000</td>\n",
-       "      <td>455.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>72.500000</td>\n",
-       "      <td>60.000000</td>\n",
-       "      <td>92.500000</td>\n",
-       "      <td>80.000000</td>\n",
-       "      <td>80.000000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.234266</td>\n",
+       "      <th>Rock</th>\n",
+       "      <td>3.125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Bug-Flying</th>\n",
-       "      <td>286.285714</td>\n",
-       "      <td>419.5</td>\n",
-       "      <td>63.0</td>\n",
-       "      <td>70.142857</td>\n",
-       "      <td>61.571429</td>\n",
-       "      <td>72.857143</td>\n",
-       "      <td>69.071429</td>\n",
-       "      <td>82.857143</td>\n",
-       "      <td>2.857143</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.146274</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Bug-Ghost</th>\n",
-       "      <td>292.000000</td>\n",
-       "      <td>236.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>90.000000</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>40.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.000000</td>\n",
+       "      <th>Water-Dark</th>\n",
+       "      <td>3.750</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       #  Total    HP      Attack    Defense    Sp. Atk  \\\n",
-       "                    mean   mean  mean        mean       mean       mean   \n",
-       "Combo Type                                                                \n",
-       "Bug-Electric  595.500000  395.5  60.0   62.000000  55.000000  77.000000   \n",
-       "Bug-Fighting  214.000000  550.0  80.0  155.000000  95.000000  40.000000   \n",
-       "Bug-Fire      636.500000  455.0  70.0   72.500000  60.000000  92.500000   \n",
-       "Bug-Flying    286.285714  419.5  63.0   70.142857  61.571429  72.857143   \n",
-       "Bug-Ghost     292.000000  236.0   1.0   90.000000  45.000000  30.000000   \n",
-       "\n",
-       "                 Sp. Def      Speed Generation Legendary A/D Ratio  \n",
-       "                    mean       mean       mean      mean      mean  \n",
-       "Combo Type                                                          \n",
-       "Bug-Electric   55.000000  86.500000   5.000000       0.0  1.111667  \n",
-       "Bug-Fighting  100.000000  80.000000   2.000000       0.0  1.637681  \n",
-       "Bug-Fire       80.000000  80.000000   5.000000       0.0  1.234266  \n",
-       "Bug-Flying     69.071429  82.857143   2.857143       0.0  1.146274  \n",
-       "Bug-Ghost      30.000000  40.000000   3.000000       0.0  2.000000  "
+       "           A/D Ratio\n",
+       "                mean\n",
+       "Combo Type          \n",
+       "Bug-Poison     3.750\n",
+       "Psychic        9.000\n",
+       "Rock           3.125\n",
+       "Water-Dark     3.750"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 508,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# your code here\n",
-    "pokemon.groupby(\"Combo Type\").agg(['mean']).head()\n"
+    "var.groupby(\"Combo Type\").agg(['mean']).head()\n"
    ]
   },
   {
