all challenges, but no main

--- a/module-1/lab-df-calculation-and-transformation/your-code/challenge-2.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/challenge-2.ipynb
@@ -506,31 +506,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Total       1.000000\n",
-       "Dragon      0.229705\n",
-       "Psychic     0.124688\n",
-       "Steel       0.109703\n",
-       "Fire        0.078726\n",
-       "Fighting    0.077786\n",
-       "Ice         0.060248\n",
-       "Flying      0.059383\n",
-       "Dark        0.056154\n",
-       "Rock        0.032731\n",
-       "Electric    0.020971\n",
-       "Ground      0.015060\n",
-       "Ghost       0.003641\n",
-       "Water      -0.021665\n",
-       "Fairy      -0.036698\n",
-       "Grass      -0.052592\n",
-       "Poison     -0.090441\n",
-       "Normal     -0.105331\n",
-       "Bug        -0.145781\n",
+       "Total      1.000000\n",
+       "Dragon     0.229705\n",
+       "Psychic    0.124688\n",
+       "Steel      0.109703\n",
+       "Fire       0.078726\n",
        "Name: Total, dtype: float64"
       ]
      },
@@ -541,8 +527,15 @@
    "source": [
     "type_dummies [\"Total\"] = pokemon[\"Total\"]\n",
     "total_ty = type_dummies.corr()[\"Total\"]\n",
-    "display(total_ty.sort_values(ascending=False))\n",
+    "display(total_ty.sort_values(ascending=False).head())\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I'd choose Dragon type!"
    ]
   },
   {
@@ -556,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -567,63 +560,7 @@
        "Dragon-Ice          0.128737\n",
        "Dragon-Psychic      0.127066\n",
        "Psychic-Fighting    0.104173\n",
-       "Ghost-Dragon        0.102264\n",
-       "Ground-Fire         0.098824\n",
-       "Rock-Dark           0.089736\n",
-       "Fire-Flying         0.084398\n",
-       "Rock-Fairy          0.084386\n",
-       "Water-Dragon        0.073033\n",
-       "Psychic-Dark        0.072266\n",
-       "Dragon-Electric     0.072266\n",
-       "Dragon-Fire         0.072266\n",
-       "Steel-Dragon        0.072266\n",
-       "Electric-Flying     0.067801\n",
-       "Normal-Fighting     0.064682\n",
-       "Water-Fighting      0.062210\n",
-       "Flying              0.060506\n",
-       "Ground-Flying       0.059068\n",
-       "Fire-Dragon         0.058692\n",
-       "Bug-Steel           0.058471\n",
-       "Fighting-Steel      0.058418\n",
-       "Grass-Dragon        0.057512\n",
-       "Dragon-Ground       0.057482\n",
-       "Psychic             0.054856\n",
-       "Rock-Flying         0.052859\n",
-       "Steel-Ground        0.052154\n",
-       "Electric-Dragon     0.051610\n",
-       "Fire-Water          0.048659\n",
-       "                      ...   \n",
-       "Grass-Fairy        -0.023010\n",
-       "Ice-Psychic        -0.023010\n",
-       "Ghost-Grass        -0.023651\n",
-       "Ghost-Fire         -0.023934\n",
-       "Grass-Poison       -0.024255\n",
-       "Water-Flying       -0.024374\n",
-       "Ground-Dark        -0.024446\n",
-       "Psychic-Fairy      -0.027628\n",
-       "Poison-Bug         -0.031014\n",
-       "Electric           -0.033589\n",
-       "Poison-Water       -0.033965\n",
-       "Fairy              -0.034786\n",
-       "Fire               -0.036359\n",
-       "Bug-Grass          -0.037054\n",
-       "Bug-Ground         -0.037625\n",
-       "Rock-Ground        -0.039954\n",
-       "Water-Fairy        -0.041801\n",
-       "Ground             -0.042744\n",
-       "Water-Grass        -0.045257\n",
-       "Bug-Water          -0.049015\n",
-       "Water              -0.050266\n",
-       "Fighting           -0.053630\n",
-       "Grass              -0.054546\n",
-       "Bug-Ghost          -0.058753\n",
-       "Normal             -0.064085\n",
-       "Poison             -0.064380\n",
-       "Normal-Fairy       -0.069525\n",
-       "Bug-Poison         -0.089742\n",
-       "Normal-Flying      -0.092626\n",
-       "Bug                -0.178699\n",
-       "Name: Total, Length: 155, dtype: float64"
+       "Name: Total, dtype: float64"
       ]
      },
      "metadata": {},
@@ -652,8 +589,15 @@
     "combo_num [\"Total\"] = pokemon[\"Total\"]\n",
     "\n",
     "total_comb = combo_num.corr()[\"Total\"]\n",
-    "display(total_comb.sort_values(ascending=False))\n",
+    "display(total_comb.sort_values(ascending=False).head(5))\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I'd choose Dragon-Flying type!"
    ]
   },
   {
